Tue Jun 28 10:26:49 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c: remove warning

Mon Jun 27 18:23:50 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* doc/dblib_errors.txt include/sybdb.h src/dblib/dblib.c
	- created error message structure

Mon Jun 27 15:54:39 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* configure.in src/dblib/unittests/Makefile.am
	- thread.c needed ENABLE_THREADSAFE conditional
	* src/dblib/dblib.c rewrote dbbind, added error messages

Mon Jun 27 21:05:49 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/array.c src/odbc/unittests/array_out.c:
	* src/tds/unittests/dataread.c:
	- remove warnings

Mon Jun 27 16:46:57 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/unittests/array_out.c:
	- fix array_out test

Mon Jun 27 10:05:48 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* doc/dblib_errors.txt fixed error severity table

Mon Jun 27 09:30:02 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/query.c:
	- typo fixes
	- rename tds_next_placeholders to tds_next_placeholder

Mon Jun 27 07:07:59 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/unittests/array.c: comments added

Sun Jun 26 10:22:15 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* tds.dox doc/api_status.txt
	* include/sybdb.dox.h include/sybdb.h
	* src/dblib/bcp.c src/dblib/dblib.c src/dblib/rpc.c
	* src/replacements/iconv.c
	* src/tds/convert.c src/tds/iconv.c src/tds/query.c src/tds/token.c
	- Documentation improvements, mostly.  Cf. Doxygen output.  

Wed Jun 22 20:33:38 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/bsqldb.c src/apps/defncopy.c src/ctlib/ctutil.c:
	- remove warnings

Wed Jun 22 10:21:17 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/blk.c: remove warning compiling under gcc4

Tue Jun 21 22:50:20 CET 2005    Frediano Ziglio <freddy77@angelfire.com>