@@ -1,3 +1,7 @@
+Tue Jun 28 21:07:40 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
+	* include/tds.h src/tds.net:
+	- make tds_goodread/tds_goodwrite static again
+
 Tue Jun 28 10:26:49 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
 	* src/dblib/dblib.c: remove warning
 
